[tool.poetry]
name = "ytdl"
version = "0.1.0"
description = "youtube-dl downloader"
authors = ["Kim van Wyk <kimv@sahomeloans.com>"]

[tool.poetry.dependencies]
python = "^3.6"
youtube-dl = "^2019.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
